--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/plans.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/plans.component.html
@@ -5,7 +5,7 @@
       <h6>Plan List</h6>
     </div>
     <div class="abc">
-      <a  routerLink="/import-report" class="create-button" >
+      <a  routerLink="/import-plan" class="create-button" >
         <button> Import</button>
       </a>
     </div>
