fix user status

--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/add-new-user/add-new-user.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/add-new-user/add-new-user.component.html
@@ -227,10 +227,15 @@
                         <div class="col-md-3 ps-5">
                             <h6 class="mb-0">Status</h6>
                         </div>
+                        @if (isEdit) {
                         <div class="col-md-5 pe-3">
-                            <input class="form-control form-control-lg" type="text" id="status"
-                                [value]="getStatusLabel(addUserF.get('status')?.value)" readonly>
+                            <input class="form-control form-control-lg" type="text" id="status" formControlName="status"
+                                readonly />
+                        </div>} @else {
+                        <div class="col-md-5 pe-3">
+                            <div class="form-control form-control-lg" readonly >Active</div>
                         </div>
+                        }
                     </div>
                 </div>
             </div>
