hidden change status for current user

--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/add-new-user/add-new-user.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/add-new-user/add-new-user.component.html
@@ -233,7 +233,7 @@
                                 readonly />
                         </div>} @else {
                         <div class="col-md-5 pe-3">
-                            <div class="form-control form-control-lg" readonly >Active</div>
+                            <div class="form-control form-control-lg custom-background" readonly>Active</div>
                         </div>
                         }
                     </div>
