--- a/FinancialPlaningUI/FinancialPlaning/src/app/share/sidenav/sidenav.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/share/sidenav/sidenav.component.css
@@ -1,7 +1,7 @@
 #sidenav {
   position: fixed;
   width: 60px;
-  height: 100vh;
+  height: 100%;
   padding-top: 1px;
   transition: width 0.5s;
   z-index: 1;
