--- a/FinancialPlaningUI/FinancialPlaning/src/app/app.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/app.component.html
@@ -1,6 +1,7 @@
+<ng-container>
+    <app-sidenav *ngIf="logged && !isAdmin"></app-sidenav>
+    <app-admin-sidenav *ngIf="logged && isAdmin"></app-admin-sidenav>
 
-<ng-container *ngIf="logged">
-    <app-sidenav></app-sidenav>
 </ng-container>
 
 <router-outlet></router-outlet>
