re-style annual report

--- a/FinancialPlaningUI/FinancialPlaning/src/styles.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/styles.css
@@ -14,7 +14,7 @@
   --closed-status-color: #808080; 
   --button-background: #6F4EFF;
   --version-background: #fff5cc;
-  --close-button-background: #d4200b;
+  --close-button-background: #f88477;
 }
 
 body {
