--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/list-report/list-report.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/list-report/list-report.component.css
@@ -24,38 +24,29 @@ div:has(#page-title) {
 }
 
 button {
-  /* background: #535c91; */
+  background: var(--button-background);
   border: none;
 }
 
-
-.abc {
+.top-button {
   position: absolute;
   top: 50%;
   right: 0;
   transform: translateY(-50%);
 }
 
-.abc button {
-  padding: 10px 20px;
+.top-button button {
+  width: 110px;
+  color: white;
+  padding: 10px 15px;
   border-radius: 10px;
   margin-right: 10px;
 }
 
-.abc i {
-  margin-right: 10px;
+.top-button button:hover {
+  background-color: #553cb9;
 }
 
-
-#create-button > button {
-  /* color: white; */
-  padding: 10px 20px;
-  border-radius: 10px;
-}
-
-#create-button i {
-  margin-right: 10px;
-}
 
 .searchBar {
   position: relative;
