--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/list-report/list-report.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/list-report/list-report.component.html
@@ -4,12 +4,20 @@
       <h1><b> Monthly Reports</b></h1>
       <h6>View all Monthly Reports</h6>
     </div>
-    <div class="abc">
+    <!-- <div class="abc">
       <a  routerLink="/import-report" class="create-button" >
         <button> Import</button>
       </a>
       <a (click)="exportMutilreport()" class="export-button" >
         <button> Export</button>
+      </a>
+    </div> -->
+    <div class="top-button">
+      <a class="create-button" routerLink="/import-report">
+        <button><i class="fa-solid fa-upload me-1"></i> Import</button>
+      </a>
+      <a (click)="exportMutilreport()" class="export-button" >
+        <button><i class="fa-solid fa-download me-1"></i> Export</button>
       </a>
     </div>
   </div>
@@ -18,7 +26,8 @@
       <input type="text" placeholder="Search" (input)="changeSearchText($event)" />
       <i class="fa-solid fa-search"></i>
     </form>
-    <button id="filter-button" class="btn col-6 ms-4" (click)="filterStatusEnable = !filterStatusEnable"><mat-icon
+    <button id="filter-button" class="btn col-6 ms-4" (click)="filterStatusEnable = !filterStatusEnable"
+      [ngStyle]="filterStatusEnable ? {'box-shadow': 'inset 0px 5px 17px -6px rgba(0,0,0,0.2)'} : {}"><mat-icon
         class="align-middle">filter_list</mat-icon> Filter </button>
   </div>
   <div *ngIf="filterStatusEnable">
