--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/list-report/message-bar-report.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/list-report/message-bar-report.component.html
@@ -1,5 +1,5 @@
 <span [style.color]="data.httpStatusCode == 200 ? '#16ff00' : '#ff204e'">
-    <i *ngIf="data.httpStatusCode == 200" class="fa-regular fa-circle-check"></i>
-    <i *ngIf="data.httpStatusCode != 200" class="fa-regular fa-circle-xmark"></i>
+    <i *ngIf="data.httpStatusCode == 200" class="fa-regular fa-circle-check background"></i>
+    <i *ngIf="data.httpStatusCode != 200" class="fa-regular fa-circle-xmark background"></i>
     {{data.message}}
 </span>
