--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-list/user-list.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-list/user-list.component.css
@@ -1,13 +1,12 @@
 main {
   position: absolute;
   height: 100vh;
-  width: calc(100vw - 60px);
-  max-height: 100vh;
-  max-width: calc(100vw - 60px);
-  min-width: calc(100vw - 60px);
-  left: 45px;
-  padding: 30px;
+  width: 100%;
   background-color: #E6E6E6;
+  padding-top:6%;
+  padding-left: 1%;
+  padding-right: 1%;
+  
 }
 
 .container {
@@ -31,7 +30,7 @@ button {
 
 #create-button {
   position: absolute;
-  top: 8%;
+  top: 15%;
   right: 2%;
   transform: translateY(-50%);
 }
@@ -100,6 +99,7 @@ table {
   overflow: hidden !important;
   box-shadow: 0px -5px 2px -4px #020202;
   flex-shrink: 0;
+  
 }
 table td,
 table th {
