--- a/FinancialPlaningUI/FinancialPlaning/src/app/share/admin-sidenav/admin-sidenav.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/share/admin-sidenav/admin-sidenav.component.html
@@ -1,9 +1,7 @@
-<aside id="sidenav" #sidenav (mouseover)="hovering=true" (mouseout)="hovering=false">
-  <a routerLink="/home" routerLinkActive="active">
-    <img src="../../../assets/img/logo.png" alt="logo" *ngIf="!hovering" class="w-100">
-    <b *ngIf="hovering">FinancialPlanning</b>
-  </a>
+<aside id="sidenav" >
+  <img src="../../../assets/img/logo.png" alt="logo"class="logo">
   <a routerLink="/user-list"><i class="fa-solid fa-users"></i>User Management</a>
+  <b>FinancialPlanning</b>
   <div id="account" class="pt-2">
     <i class="fa-regular fa-user my-auto mx-3"></i>
     <div class="d-grid align-self-center fw-bolder w-50">{{ username }}<span id="role" class="d-block">{{role}}</span></div>
