--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/create-term/create-term.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/create-term/create-term.component.html
@@ -21,7 +21,9 @@
                         </div>
                         <div class="error-message col-md-3"
                             *ngIf="termForm.get('termName')?.errors?.['required'] && termForm.get('termName')?.touched">
-                            Term Name is required
+                            <span class="text-danger">
+                                Term Name is required
+                            </span>
                         </div>
                     </div>
                 </div>
@@ -36,8 +38,10 @@
                             <input class="form-control form-control-lg"matInput [matDatepicker]="startDatePicker" formControlName="startDate">
                             <mat-datepicker #startDatePicker></mat-datepicker>
                           </div>
-                        <div class="error-message" *ngIf="termForm.get('startDate')?.errors?.['required'] && termForm.get('startDate')?.touched">
-                            <span class="text-danger">Start Date is required</span>
+                        <div class="error-message col-md-3" *ngIf="termForm.get('startDate')?.errors?.['required'] && termForm.get('startDate')?.touched">
+                            <span class="text-danger">
+                                Start Date is required
+                            </span>
                         </div>
                     </div>
                 </div>
@@ -96,7 +100,9 @@
                         <!-- <div class="col-md-3 pe-5"> -->
                         <div class="col-md-3">
                             <div class="error-message" *ngIf="termForm.get('planDueDate')?.touched">
-                                <span class="text-danger">{{ getPlanDueDateErrorMessage() }}</span>
+                                <span class="text-danger">
+                                    {{ getPlanDueDateErrorMessage() }}
+                                </span>
                             </div>
                         </div>
                         <!-- Add more error messages as needed -->
@@ -116,7 +122,9 @@
                         </div>
                         <div class="col-md-3">
                             <div class="error-message" *ngIf="termForm.get('reportDueDate')?.touched">
-                                <span class="text-danger">{{ getReportDueDateErrorMessage() }}</span>
+                                <span class="text-danger">
+                                    {{getReportDueDateErrorMessage() }}
+                                </span>
                             </div>
                         </div>
                     </div>
