--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/plan-details/plan-details.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/plan-details/plan-details.component.css
@@ -1,12 +1,11 @@
 main {
   position: absolute;
   height: 100vh;
-  width: calc(100vw - 100px);
+  width: calc(100vw - 60px);
   max-height: 100vh;
-  max-width: calc(100vw - 100px);
-  left: 80px;
+  max-width: calc(100vw - 60px);
+  left: 60px;
   padding: 30px;
-  background-color: #070f2b;
 }
 
 .container {
@@ -22,20 +21,21 @@ div:has(#page-title) {
 }
 
 button {
-  background: #535c91;
+  /* background: #535c91; */
   border: none;
 }
 
 
 .abc {
-  position: absolute;
-  top: 50%;
-  right: 0;
-  transform: translateY(-50%);
+  margin: 20px 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
 }
 
 .abc button {
-  color: white;
+  color: black;
   padding: 10px 20px;
   border-radius: 10px;
   margin-right: 10px;
@@ -46,68 +46,25 @@ button {
 }
 
 table {
-  width: 100%;
   min-height: auto;
-  background-color: #070f2b;
-  border: 1px solid #9290c3;
+  border: 2px solid var(--white-smoke);
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   overflow: hidden !important;
-  box-shadow: 0px -5px 2px -4px #9290c3;
+  box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
   flex-shrink: 0;
 }
 
 th {
-  border-bottom: 1px solid #1b1a55;
-  color: white;
-  font-weight: bold;
-}
-
-
-td {
-  border-top: 1px solid #535c91;
-  color: #9290c3;
+  font-weight: 900;
+  background-color: #f2f4f3 !important;
 }
 
 ::ng-deep .mat-mdc-paginator {
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
   overflow: hidden;
-}
-
-::ng-deep .mat-mdc-paginator-outer-container {
-  background-color: #535c91;
-  color: white;
-}
-
-::ng-deep .mat-mdc ::ng-deep .mat-mdc-form-field {
-  height: 50px;
-}
-
-::ng-deep .mat-mdc-text-field-wrapper {
-  margin-top: 20px !important;
-}
-
-::ng-deep .mdc-text-field--filled:not(.mdc-text-field--disabled) {
-  background-color: #070f2b !important;
-  border: 1px solid #9290c3;
-  border-radius: 10px;
-
-}
-
-::ng-deep .mat-mdc-select-arrow {
-  color: white !important;
-}
-
-::ng-deep .mat-mdc-form-field-infix {
-
-  width: 100px !important;
-}
-
-::ng-deep .mdc-text-field--filled .mdc-floating-label {
-
-  font-size: 14px !important;
-
+  box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
 }
 
 .underline {
