--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/plan-details/plan-details.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/plan-details/plan-details.component.html
@@ -2,7 +2,7 @@
   <div class="container mb-4 margin">
     <div id="page-title">
       <h4><b>Financial Plan</b></h4>
-      <h6>  <a style="color: white"   href="/plans">Plan list</a> > Plan Details</h6>
+      <h6>  <a style="color: black"   href="/plans">Plan list</a> > Plan Details</h6>
     </div>
 
   </div>
@@ -28,6 +28,18 @@
   <div class="plan-details d-flex justify-content-between">
     <h6 class="left-item"><b>Total plan: {{totalExpense | number:'1.0-0'}} VND</b></h6>
   </div>
+
+  
+  <div class="abc">
+    <a *ngIf="plan" [routerLink]="['/reup-report/', plan.id ]" class="create-button" >
+      <button> Reup</button>
+    </a>
+    <a  routerLink="/import-plan" class="create-button" >
+      <button> Export</button>
+    </a>
+  </div>
+
+ <div>
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
     <ng-container matColumnDef="No">
@@ -93,4 +105,15 @@
   <mat-paginator [length]="listSize" [pageSize]="pageSize" [pageIndex]="pageIndex" (page)="onPageChange($event)"
     [hidden]="dataSource.length==0">
   </mat-paginator>
+</div>
+
+<div class="abc" >
+  <a  routerLink="/plan-list" class="create-button" >
+    <button> Back</button>
+  </a>
+
+  <a  routerLink="/import-plan"  >
+    <button> Submit for approval</button>
+  </a>
+</div>
 </main>
