--- a/FinancialPlaningUI/FinancialPlaning/src/app/share/admin-sidenav/admin-sidenav.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/share/admin-sidenav/admin-sidenav.component.html
@@ -1,12 +1,16 @@
-<aside id="sidenav" >
-  <img src="../../../assets/img/logo.png" alt="logo"class="logo">
-  <a routerLink="/user-list"><i class="fa-solid fa-users"></i>User Management</a>
-  <b>FinancialPlanning</b>
+<aside id="sidenav">
+  <img src="../../../assets/img/logo.png" alt="logo" class="logo">
+  <b>Financial Plan System</b>
   <div id="account" class="pt-2">
     <i class="fa-regular fa-user my-auto mx-3"></i>
-    <div class="d-grid align-self-center fw-bolder w-50">{{ username }}<span id="role" class="d-block">{{role}}</span></div>
+    <div class="d-grid align-self-center fw-bolder w-45">{{ username }}<span id="role" class="d-block">{{role}}</span>
+    </div>
     <a role="button" id="logout" class="mx-0 my-auto" (click)="logout()">
       <i class="fa-solid fa-arrow-right-from-bracket"></i>
     </a>
   </div>
+  <div class="user-management">
+    <a routerLink="/user-list" class="centered-link"><i class="fa-solid fa-users"></i>User Management</a>
+  </div>
+
 </aside>
