--- a/FinancialPlaningUI/FinancialPlaning/src/app/share/admin-sidenav/admin-sidenav.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/share/admin-sidenav/admin-sidenav.component.css
@@ -1,46 +1,42 @@
 #sidenav {
-  position: fixed;
+  position: relative;
   width: 100%;
-  height: 10%;
-  margin-bottom: 5%;
-  padding-top: 1px;
-  transition: width 0.5s;
   z-index: 1;
   opacity: 95%;
   overflow: hidden;
-  background-color: #0c317a;
+  background-color: #ADB9D1;
   color: white;
   display: flex;
   /* justify-content: space-between; */
-  padding-left: 1%;
-  padding-right: 1%;
+
 }
 
 #sidenav b {
-  margin-top: 10px;
+  margin-top: 1.5%;
   font-size: xx-large;
   position: absolute;
   margin-left: 40%;
   min-width: 100%;
+  color: black;
 }
 
 .user-management {
   display: flex;
   justify-content: center;
-  position: absolute;
-  margin-left: 43%;
-  margin-top: 40px;
+  position: inherit;
+  background-color: #BCBFD2;
+  width: 100%;
+  padding: 0.5%;
+  text-decoration: none;
+
   /* Center align horizontally */
 }
 
 .centered-link {
   display: flex;
   align-items: center;
-  /* Center align vertically */
   text-decoration: none;
-  color: white;
-  margin-top: 20px;
-  /* Adjust as needed */
+  color: rgb(17, 1, 1);
 }
 
 
@@ -64,8 +60,8 @@
 
 #sidenav i {
   display: flex;
-  height: 30px;
-  width: 30px;
+  height: 40px;
+  width: 40px;
   margin-right: 20px;
   text-align: center;
   align-items: center;
@@ -74,6 +70,7 @@
   border-radius: 20px;
   color: white;
   background-color: var(--icon-background);
+ 
 }
 
 #h1 {
@@ -87,7 +84,7 @@
   justify-content: flex-end;
   /* Dịch chuyển phần tử sang bên phải */
   position: absolute;
-  bottom: 15px;
+  bottom: 35px;
   right: 0;
   /* Đặt phần tử ở góc dưới bên phải */
   height: 70px;
