restyle user UI

--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/add-new-user/add-new-user.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/add-new-user/add-new-user.component.html
@@ -3,12 +3,12 @@
     @if (isEdit) {
     <h3><b>User List</b></h3>
     <h6>
-        <a routerLink="/user-list" class="user-list-link">User List</a> > Edit User
+        <b><a routerLink="/user-list" class="user-list-link">User List</a></b> > Edit User
     </h6>
     }@else {
     <h3><b>User List</b></h3>
     <h6>
-        <a routerLink="/user-list" class="user-list-link">User List</a> > Create User
+        <b><a routerLink="/user-list" class="user-list-link">User List</a></b> > Create User
     </h6>
     }
     <div class="row d-flex justify-content-center align-items-center ">
