--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-list/user-list.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-list/user-list.component.html
@@ -4,7 +4,7 @@
   <div>
     <div id="page-title">
       <h3><b>User List</b></h3>
-      <h6>Users management</h6>
+      <h6><a routerLink="/user-list" class="user-list-link">User Management</a> > User List </h6>
     </div>
     <a routerLink="/add-user" id="create-button">
       <button><i class="fa-solid fa-plus"></i> Add</button>
