--- a/FinancialPlaningUI/FinancialPlaning/src/app/share/admin-sidenav/admin-sidenav.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/share/admin-sidenav/admin-sidenav.component.html
@@ -11,5 +11,5 @@
   </div>
 </aside>
 <div class="user-management">
-  <a routerLink="/user-list" class="centered-link"><i class="fa-solid fa-users"></i>User Management</a>
+  <a routerLink="/user-list" class="centered-link"><i class="fa-solid fa-users"></i> <span class="link-text">User Management</span></a>
 </div>
