--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/add-new-user/add-new-user.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/add-new-user/add-new-user.component.css
@@ -30,6 +30,7 @@ form input:focus, form select:focus {
 }
 a.user-list-link {
   color: black; /* Màu chữ đen */
+  text-decoration: none;
 }
 #note {
   background-color: #EBEEF3
@@ -62,10 +63,11 @@ table {
 
 main {
   box-shadow: none;
-  padding: 30px;
+  padding: 20px;
   background-color: #E6E6E6;
-  
-  
+}
+main>h6>a{
+  text-decoration: none;
 }
 
 
@@ -74,8 +76,7 @@ main>div {
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   background-color: #FAF6F6;
   margin: 3%;
-  
-
+  height: 50%;
 
 }
 .btn-disabled {
@@ -85,8 +86,8 @@ main>div {
 }
 main {
   position: relative;
-  border-radius: 10px;
-  margin-left: 3%;
+  margin-left: 2%;
+  margin-right: 2%;
   /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
   /* -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
