--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-detail/user-detail.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-detail/user-detail.component.html
@@ -1,7 +1,7 @@
 <main>
     <h3><b>User List</b></h3>
     <h6>
-        <a routerLink="/user-list" class="user-list-link">User List</a> > User Detail
+        <b><a routerLink="/user-list" class="user-list-link">User List</a></b> > User Detail
     </h6>
     <div class="doc-info mb-5 card">
         <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
