--- a/FinancialPlaningUI/FinancialPlaning/src/app/share/admin-sidenav/admin-sidenav.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/share/admin-sidenav/admin-sidenav.component.css
@@ -12,12 +12,13 @@
 }
 
 #sidenav b {
-  margin-top: 1.5%;
+  margin-top: 1%;
   font-size: xx-large;
   position: absolute;
   margin-left: 40%;
   min-width: 100%;
   color: black;
+  font-weight: 900;
 }
 
 .user-management {
@@ -31,12 +32,23 @@
 
   /* Center align horizontally */
 }
+.centered-link {
+  display: flex;
+  align-items: center;
+}
+
+.link-text {
+  margin-left: 8px; /* Có thể điều chỉnh giá trị này để tăng hoặc giảm khoảng cách */
+}
+
 
 .centered-link {
   display: flex;
   align-items: center;
   text-decoration: none;
   color: rgb(17, 1, 1);
+  margin-right: 4%;
+  font-weight: bold;
 }
 
 
@@ -84,11 +96,13 @@
   justify-content: flex-end;
   /* Dịch chuyển phần tử sang bên phải */
   position: absolute;
-  bottom: 35px;
+  bottom: 10px;
   right: 0;
   /* Đặt phần tử ở góc dưới bên phải */
   height: 70px;
   width: 200px;
+  color: black;
+  
 }
 
 #account>a>i {
@@ -96,6 +110,7 @@
   height: 50px;
   width: 50px;
   border-radius: 20px;
+  color: black;
 }
 
 #role {
@@ -103,6 +118,7 @@
   font-size: xx-small;
   color: var(--white-smoke);
   letter-spacing: 1px;
+  color: black;
 }
 
 #logout>i {
@@ -115,17 +131,21 @@
 }
 
 .logo {
-  width: 80px;
+  width: 3%;
   /* Đặt chiều rộng của logo */
   height: auto;
   /* Chiều cao tự động điều chỉnh tương ứng */
-  margin-top: 20px;
+  margin-top: 10px;
   /* Khoảng cách từ trên xuống */
-  margin-bottom: 20px;
+  margin-bottom: 10px;
+  margin-left: 1%;
   /* Khoảng cách từ dưới lên */
   display: block;
   /* Hiển thị hình ảnh dưới dạng block để căn chỉnh */
-  padding: 5px;
+  background-color: black;
+  padding: 10px;
+  border-radius: 6px;
+  
 }
 
 .logo:hover {
