edit update + add new user

--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/add-new-user/add-new-user.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/add-new-user/add-new-user.component.css
@@ -69,7 +69,15 @@ main {
 main>h6>a{
   text-decoration: none;
 }
-
+.required-star {
+  color: red; /* Màu đỏ */
+  font-weight: bolder;
+}
+#username::placeholder {
+  font-size: 16px; /* Kích thước chữ mong muốn */
+  color: red;
+  font-weight: bold;
+}
 
 main>div {
   border-radius: 24px;
