change import and reup layout

--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/import-plan/import-plan.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/import-plan/import-plan.component.html
@@ -32,7 +32,7 @@
     <div class="right col-md-12 col-lg-9">
       <mat-card class="preview-card">
         <h3 class="mb-3">Preview</h3>
-        <div class="table mat-elevation-z8">
+        <div class="table">
           <table mat-table [dataSource]="dataSource" class="">
             <ng-container matColumnDef="expense">
               <th mat-header-cell *matHeaderCellDef> Expense </th>
