--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/plan-details/plan-details.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/plan-details/plan-details.component.html
@@ -31,7 +31,7 @@
 
   
   <div class="abc">
-    <a *ngIf="plan" [routerLink]="['/reup-report/', plan.id ]" class="create-button" >
+    <a *ngIf="plan" [routerLink]="['/reup-plan/', plan.id ]" class="create-button" >
       <button> Reup</button>
     </a>
     <a  routerLink="/import-plan" class="create-button" >
@@ -108,7 +108,7 @@
 </div>
 
 <div class="abc" >
-  <a  routerLink="/plan-list" class="create-button" >
+  <a  routerLink="/plans" class="create-button" >
     <button> Back</button>
   </a>
 
