--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/import-report/import-report.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/import-report/import-report.component.html
@@ -37,7 +37,7 @@
     <div class="col-md-12 col-lg-8">
       <mat-card class="preview-card">
         <h3 class="mb-3">Preview</h3>
-        <div class="table mat-elevation-z8">
+        <div class="table">
           <table mat-table [dataSource]="dataSource" class="">
             <ng-container matColumnDef="expense">
               <th mat-header-cell *matHeaderCellDef> Expense </th>
