--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/import-plan/import-plan.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/import-plan/import-plan.component.css
@@ -49,8 +49,8 @@ h5 {
     height: 100%;
 } */
 mat-card {
-    background-color: #222143;
-    color: white;
+    background-color: #F2F4F3;
+    color: black;
     /* height: 500px; */
     /* width: 100%; */
     display: flex;
@@ -63,7 +63,7 @@ mat-card {
     /* justify-content: center; */
 }
 
-mat-form-field{
+mat-form-field {
     width: 100%;
     margin: 0;
 }
@@ -75,7 +75,7 @@ form {
     /* display: block; */
     display: flex;
     flex-direction: row;
-    background-color: #222143;
+    background-color: #F2F4F3;
     align-items: center;
     width: 100%;
 }
@@ -95,7 +95,7 @@ a {
     margin-top: 20px;
 } */
 
-.import-card .buttons{
+.import-card .buttons {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -122,8 +122,8 @@ a {
 }
 
 .preview-button {
-    background-color: #4F85F2;
-    color: white;
+    background-color: #FFFFFF;
+    color: #4F85F2;
     border: none;
     border-radius: 10px;
     padding: 10px 20px;
@@ -138,7 +138,7 @@ a {
 
 
 
-.import-card{
+.import-card {
     min-width: 200px;
     position: relative;
     display: flex;
@@ -149,6 +149,7 @@ a {
 app-upload {
     width: 100%;
 }
+
 @media screen and (max-width: 1200px) {
     .import-card {
         display: flex;
@@ -157,7 +158,7 @@ app-upload {
 
     }
 
-    .left{
+    .left {
         /* width: 100%; */
         min-width: 550px
     }
@@ -166,12 +167,12 @@ app-upload {
         width: 75%;
     }
 
-    .import-card .buttons{
+    .import-card .buttons {
         flex-direction: column;
         width: 20%;
     }
 
-    .preview-button{
+    .preview-button {
         margin-top: 20px;
         width: 100%;
         padding: 10px;
@@ -248,29 +249,29 @@ button {
 table {
     width: 100%;
     min-height: auto;
-    background-color: #070f2b !important;
-    border: 1px solid #9290c3;
+    border: 2px solid var(--white-smoke) !important;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
     overflow: hidden !important;
-    box-shadow: 0px -5px 2px -4px #9290c3;
+    /* box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1); */
     flex-shrink: 0;
-}
-
-tr {
-    background-color: #1b1a55;
-    color: white;
+    
 }
 
 th {
-    border-bottom: 1px solid #1b1a55;
-    color: white;
+    font-weight: 900;
+    background-color: #f2f4f3 !important;
 }
 
-td {
-    border-top: 1px solid #535c91;
-    color: #9290c3;
+
+::ng-deep .mat-mdc-paginator {
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
 }
+
+
 
 ::ng-deep .mat-mdc-paginator {
     border-bottom-left-radius: 20px;
@@ -279,7 +280,7 @@ td {
 }
 
 ::ng-deep .mat-mdc-paginator-outer-container {
-    background-color: #535c91;
+    background-color: #F2F4F3;
     color: white;
 }
 
@@ -292,10 +293,10 @@ td {
 }
 
 ::ng-deep .mdc-text-field--filled:not(.mdc-text-field--disabled) {
-    background-color: #070f2b !important;
+    background-color: #F2F4F3 !important;
     border: 1px solid #9290c3;
     border-radius: 10px;
-
+    /* margin-right: 3px; */
 }
 
 ::ng-deep .mat-mdc-select-arrow {
@@ -314,19 +315,14 @@ td {
 }
 
 ::ng-deep .mat-mdc-select {
-    color: white !important;
+    color: black !important;
     font-size: 14px !important;
+    margin-right: 5px;
 }
 
-::ng-deep .mat-mdc-form-field {
-
-    margin-left: 30px;
-
-}
 
 .emtry-data-message {
     text-align: center;
     font-size: large;
     margin-top: 15%;
 }
-
