--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/reup-plan/reup-plan.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/reup-plan/reup-plan.component.html
@@ -4,7 +4,7 @@
       <h1 class="mb-4">Reup Plan</h1>
       <!-- <h5>Step 1/2: Please select a file to import</h5> -->
       <mat-card class="import-card">
-        <app-upload (fileSelected)="onFileSelected($event)"></app-upload>
+        <app-upload (fileSelected)="onFileSelected($event)" [validName]="validFileName"></app-upload>
         <div class="buttons">
           <button class="preview-button">
             <span>Template</span>
@@ -18,7 +18,7 @@
     <div class="col-lg-8 right">
       <mat-card class="preview-card">
         <h3 class="mb-3">Preview</h3>
-        <div class="table mat-elevation-z8">
+        <div class="table">
           <table mat-table [dataSource]="dataSource" class="">
             <ng-container matColumnDef="expense">
               <th mat-header-cell *matHeaderCellDef> Expense </th>
@@ -58,7 +58,7 @@
             </ng-container>
             <ng-container matColumnDef="status">
               <th mat-header-cell *matHeaderCellDef> Status </th>
-              <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+              <td mat-cell *matCellDef="let element"> {{expense_status[element.status]}} </td>
             </ng-container>
   
             <tr mat-header-row *matHeaderRowDef="columnHeaders"></tr>
@@ -71,7 +71,7 @@
         </div>
         <div>
           <div class="buttons">
-            <a routerLink="/plans">
+            <a [routerLink]="['/plan-details/', planId ]">
               <button class="back-button">
                 <span>Back</span>
               </button>
