--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/reup-report/reup-report.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/reup-report/reup-report.component.html
@@ -22,7 +22,7 @@
             </mat-select>
           </mat-form-field>
         </form> -->
-        <app-upload class="w-100" (fileSelected)="onFileSelected($event)"></app-upload>
+        <app-upload class="w-100" (fileSelected)="onFileSelected($event)" [validName]="validFileName"></app-upload>
         <div class="buttons">
           <button class="preview-button" (click)="onImport()">
             <span>Preview</span>
@@ -33,7 +33,7 @@
     <div class="col-md-12 col-lg-8">
       <mat-card class="preview-card">
         <h3 class="mb-3">Preview</h3>
-        <div class="table mat-elevation-z8">
+        <div class="table">
           <table mat-table [dataSource]="dataSource" class="">
             <ng-container matColumnDef="expense">
               <th mat-header-cell *matHeaderCellDef> Expense </th>
