--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/edit-term/edit-term.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/edit-term/edit-term.component.html
@@ -3,6 +3,7 @@
     <button (click)="startTerm()">
         Start Term
     </button> -->
+    <a [routerLink]="['/terms']" id="back-link"><i class="fa-solid fa-arrow-left-long me-2 mb-3"></i> Back </a>
     <div class="container mb-4">
         <div id="page-title">
           <h3><b>Term Manager</b></h3>
