change text color

--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/import-report/import-report.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/import-report/import-report.component.css
@@ -261,7 +261,7 @@ th {
 }
 
 ::ng-deep .mat-mdc-select {
-    color: white !important;
+    color: black !important;
     font-size: 14px !important;
 }
 
