--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/update-user-status/update-user-status.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/update-user-status/update-user-status.component.html
@@ -4,6 +4,6 @@
     <p class="note">Please, rethink your decision because this will affect to user</p>
 </mat-dialog-content>
 <mat-dialog-actions>
-    <button mat-button mat-dialog-close id="cancel-button">Cancel</button>
     <button mat-button [mat-dialog-close]="'update'" cdkFocusInitial id="update-button">Change</button>
+    <button mat-button [mat-dialog-close]="null" id="cancel-button">Cancel</button>
 </mat-dialog-actions>
