restyle userlist UI

--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-list/user-list.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-list/user-list.component.html
@@ -57,7 +57,7 @@
   <div *ngIf="userList.length == 0" class="empty-data-message">
     No items match your credentials, please try again.
   </div>
-  <mat-paginator [length]="listSize" [pageSize]="pageSize" [pageIndex]="pageIndex" (page)="onPageChange($event)">
+  <mat-paginator [length]="listSize" [pageSize]="pageSize" [pageIndex]="pageIndex" (page)="onPageChange($event)" [hidden]="dataSource.length==0  || (dataSource.length<pageSize && pageIndex==0)">
   </mat-paginator>
 </main>
 <footer>
