--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-list/user-list.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-list/user-list.component.css
@@ -99,6 +99,8 @@ table {
   border: 1px solid #0b0b0c;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
   overflow: hidden !important;
   box-shadow: 0px -5px 2px -4px #020202;
   flex-shrink: 0;
