--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/report-details/report-details.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/report-details/report-details.component.html
@@ -1,8 +1,8 @@
 <main>
   <a [routerLink]="['/reports']" id="back-link"><i class="fa-solid fa-arrow-left-long me-2 mb-3"></i> Back </a>
-  <div class="container mb-1">
+  <div class="container mb-1" *ngIf="report">
     <div id="page-title">
-      <h3><b> {{report.reportName}} </b>
+      <h3><b > {{report.reportName}} </b>
         <span id="status" class="fs-6 rounded-pill px-2 py-2 d-inline-block align-bottom lh-1 me-2"
           [ngStyle]="{'background-color': report.status === 0 ? 'var(--new-status-background)' : 'var(--closed-status-background)'}">
           <i class="fa-solid fa-circle align-middle me-1"
