--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/planVersions/planVersions.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/planVersions/planVersions.component.html
@@ -4,7 +4,11 @@
 
         <ng-container matColumnDef="Version">
             <th mat-header-cell *matHeaderCellDef> Version </th>
-            
+            <td mat-cell *matCellDef="let element; let firstRow = first" 
+            (click)="downloadFile(element.planId, element.version)"
+            style="cursor: pointer; text-decoration: underline;">
+                {{ firstRow ? 'CURRENT v.' + element.version : 'v.' + element.version }}
+              </td>
         </ng-container>
 
         <ng-container matColumnDef="Published data">
@@ -17,12 +21,12 @@
             <td mat-cell *matCellDef="let element"> {{element.uploadedBy}} </td>
         </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
     </table>
 
 </mat-dialog-content>
 <mat-dialog-actions>
-    <button mat-button mat-dialog-close id="cancel-button" (click)="closeDialog()">Cancel</button>
+    <button mat-button id="cancel-button" class="border-0" (click)="closeDialog()">Close</button>
 </mat-dialog-actions>
