Edit Remove Plan

--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/plan-details/plan-details.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/plan-details/plan-details.component.html
@@ -9,7 +9,7 @@
   <div  class="plan-details d-flex justify-content-between">
 
     <div class="left-item">
-      <h6>Plan: {{plan.plan}}</h6>
+      <h6>Plan: {{plan.department}}_{{plan.term}} </h6>
       <h6>Term: {{plan.term}}</h6>
       <h6>Department: {{plan.department}}</h6>
       <h6>Status: {{plan.status}}</h6>
