--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/list-report/list-report.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/list-report/list-report.component.html
@@ -28,7 +28,7 @@
     </form>
     <button id="filter-button" class="btn col-6 ms-4" (click)="filterStatusEnable = !filterStatusEnable"
       [ngStyle]="filterStatusEnable ? {'box-shadow': 'inset 0px 5px 17px -6px rgba(0,0,0,0.2)'} : {}"><mat-icon
-        class="align-middle">filter_list</mat-icon> Filter </button>
+        class="align-middle">filter_list</mat-icon>More Filter </button>
   </div>
   <div *ngIf="filterStatusEnable">
     <!-- Department -->
