--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/reup-report/reup-report.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/reup-report/reup-report.component.html
@@ -37,7 +37,7 @@
           <table mat-table [dataSource]="dataSource" class="">
             <ng-container matColumnDef="expense">
               <th mat-header-cell *matHeaderCellDef> Expense </th>
-              <td mat-cell *matCellDef="let element"> {{element.expense}} </td>
+              <td mat-cell *matCellDef="let element"> {{element.expenseName}} </td>
             </ng-container>
             <ng-container matColumnDef="costType">
               <th mat-header-cell *matHeaderCellDef> Cost Type </th>
@@ -45,7 +45,7 @@
             </ng-container>
             <ng-container matColumnDef="unitPrice">
               <th mat-header-cell *matHeaderCellDef> Unit Price(VND) </th>
-              <td mat-cell *matCellDef="let element"> {{element.unitPrice}} </td>
+              <td mat-cell *matCellDef="let element"> {{element.unitPrice| number:'1.0-0'}} </td>
             </ng-container>
             <ng-container matColumnDef="amount">
               <th mat-header-cell *matHeaderCellDef> Amount </th>
@@ -53,7 +53,7 @@
             </ng-container>
             <ng-container matColumnDef="total">
               <th mat-header-cell *matHeaderCellDef> Total(VND) </th>
-              <td mat-cell *matCellDef="let element"> {{element.total}} </td>
+              <td mat-cell *matCellDef="let element"> {{element.totalAmount| number:'1.0-0'}} </td>
             </ng-container>
             <ng-container matColumnDef="projectName">
               <th mat-header-cell *matHeaderCellDef> Project Name </th>
