Delete file plan

--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/plans.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/plans.component.html
@@ -16,7 +16,7 @@
         <i class="fa-solid fa-search"></i>
       </form>
       <button id="filter-button" class="btn col-6 ms-4" (click)="filterStatusEnable = !filterStatusEnable"><mat-icon
-          class="align-middle">filter_list</mat-icon> Filter </button>
+          class="align-middle">filter_list</mat-icon> More </button>
     </div>
   <div *ngIf="filterStatusEnable">
       <mat-form-field  >
