fix incorrect no. in plan list

--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/annual-report/list-annual-reports/list-annual-reports.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/annual-report/list-annual-reports/list-annual-reports.component.html
@@ -37,7 +37,7 @@ displayedColumns: string[] = ['Index','Year','TotalExpense','TotalDepartment','C
         </ng-container>
 
         <ng-container matColumnDef="Create-Date">
-            <th mat-header-cell *matHeaderCellDef> Create-Date </th>
+            <th mat-header-cell *matHeaderCellDef> Created Date </th>
             <td mat-cell *matCellDef="let element"> {{convertIsoDateToDdMmYyyy(element.createDate)}} </td>
         </ng-container>
         
