--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/annual-report/annual-report-details/annual-report-details.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/annual-report/annual-report-details/annual-report-details.component.html
@@ -6,7 +6,7 @@
         <h3><b>Annual Expense Report {{ annualReport.year }}</b></h3>
 
         <h6 class="fw-bold">   <span
-          class="text-muted fw-light"> Created-date </span> {{ convertIsoDateToDdMmYyyy(annualReport.createDate)}}</h6>
+          class="text-muted fw-light"> Created date: </span> {{ convertIsoDateToDdMmYyyy(annualReport.createDate)}}</h6>
        
       </div>
       <div class="top-button">
@@ -54,7 +54,7 @@
             <td mat-cell *matCellDef="let element"> {{element.department}} </td>
           </ng-container>
           <ng-container matColumnDef="TotalExpense">
-            <th mat-header-cell *matHeaderCellDef> TotalExpense </th>
+            <th mat-header-cell *matHeaderCellDef> Total Expense </th>
             <td mat-cell *matCellDef="let element"> {{element.totalExpense | number:'1.0-0'}} VND</td>
           </ng-container>
           <ng-container matColumnDef="BiggestExpenditure">
